support for severing passthrough slice, play with checker framework